[gd_scene load_steps=6 format=3 uid="uid://chm3cbemhfi81"]

[ext_resource type="Script" path="res://village/village_ui/village_ui.gd" id="1_y3ru5"]
[ext_resource type="StyleBox" uid="uid://qc8yd50q6qp5" path="res://village/village_ui/ui_theme.tres" id="2_a6pdk"]

[sub_resource type="Animation" id="Animation_nq1rx"]
resource_name = "hide"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jrgah"]
resource_name = "show"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x40up"]
_data = {
"hide": SubResource("Animation_nq1rx"),
"show": SubResource("Animation_jrgah")
}

[node name="VillageUI" type="CanvasLayer"]
script = ExtResource("1_y3ru5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x40up")
}

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="PanelContainer" type="PanelContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_a6pdk")

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Köy Yönetimi"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResourceButton" type="Button" parent="MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Kaynak Yönetimi"

[node name="BuildingButton" type="Button" parent="MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "İnşaat Yönetimi"

[node name="HSeparator2" type="HSeparator" parent="MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="WorkerListLabel" type="Label" parent="MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "İşçi Listesi:"

[node name="WorkerList" type="VBoxContainer" parent="MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="BackButton" type="Button" parent="MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Kapat"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
